2004-10-15 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Delete gplink output files when errors occur.
  * Use more boolean types.
  * Clean up top level of gplink.
  * Added French translation of gputils man pages.

2004-10-10 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Merged changes from cod-branch:
    - Fixed stop location error in directory map of COD files.
    - Added time and date to COD files.
    - Fixed error in gpvc time reporting.
    - Changed to byte addressing for 18xx cod files.
  * Added direct messaging from COFF and COD files to simulator.
  * Added new COFF directives .ident and .type.
  * Allow expressions as arguments to banksel, bankisel, and pagesel.
  * Improved rpm spec file.

2004-10-02 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Fixed error in disassembly of 18xx instuctions.

2004-09-26 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added directives to gpasm for directly modifying COFF symbol tables.
  * Changed the gpasm COFF debug directives to .file, .eof, and .line.  

2004-09-24 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.12.4 Released.
  * Allow odd relocation addresses in gplink and gpasm.

2004-09-16 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Improved banksel and pagesel directives.

2004-09-13 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Remove processor name kludge in gpasm lexer. 
  * Fixed bug in gpal indirect access banksel. 
  * Fixed bug in gpal function return values.

2004-09-05 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added new error message to gplink to catch udata sections in devices
    with only shared memory definitions.
  * Allow udata sections to be relocated by gplink to shared sections if
    no space is available.

2004-08-29 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Add 18xx support to gpal.
  * Fix disassembly of multi-word 18xx instructions.
