@@ -57,7 +57,7 @@ AC_CHECK_TOOL(AR, ar, :)
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(stdlib.h malloc.h unistd.h string.h strings.h)
+AC_CHECK_HEADERS(stdlib.h malloc.h unistd.h string.h strings.h windows.h)
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
